Support java 17 runtime (#11018)