@@ -70,7 +70,7 @@
     <aether-util.version>1.13.1</aether-util.version>
     <!-- drools 8.x requires Java 11 -->
     <drools.version>7.74.1.Final</drools.version>
-    <geb.version>2.3.1</geb.version>
+    <geb.version>6.0</geb.version>
     <selenium.version>3.141.59</selenium.version>
     <httpcomponents.version>4.5.14</httpcomponents.version>
     <nexus-scm-client.version>1.51.15-01</nexus-scm-client.version>
@@ -1012,7 +1012,11 @@
         <artifactId>bcprov-jdk18on</artifactId>
         <version>${bouncycastle.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcpkix-jdk18on</artifactId>
+        <version>${bouncycastle.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-continuation</artifactId>
@@ -1152,13 +1156,17 @@
 
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy-all</artifactId>
-        <version>2.4.21</version>
+        <artifactId>groovy-bom</artifactId>
+        <version>3.0.20</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.spockframework</groupId>
-        <artifactId>spock-core</artifactId>
-        <version>1.3-groovy-2.4</version>
+        <artifactId>spock-bom</artifactId>
+        <version>2.4-M1-groovy-3.0</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
 
       <dependency>
@@ -1282,6 +1290,11 @@
         <version>${aws.java.sdk.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>2.3.7</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -1487,6 +1500,31 @@
         <checkstyle.skip>true</checkstyle.skip>
         <pmd.skip>true</pmd.skip>
         <clm.skip>true</clm.skip>
+      </properties>
+    </profile>
+    <profile>
+      <id>java17</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <properties>
+        <!--
+         Some tools and libraries use the reflection API (setAccessible(true)) to attempt to access non-public fields
+         and methods of java.* APIs. This is no longer possible by default on JDK 17, but you can use the -add-opens
+         option on the command line to enable it for specific tools and libraries.
+
+         https://docs.oracle.com/en/java/javase/17/migrate/migrating-jdk-8-later-jdk-releases.html#GUID-12F945EB-71D6-46AF-8C3D-D354FD0B1781
+         The libraries implicated in this exception are guice, openjpa and some of the testing/assertion libraries
+         -->
+        <argLine>
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.security=ALL-UNNAMED
+          --add-opens java.base/sun.security.rsa=ALL-UNNAMED
+          --add-opens java.base/sun.security.x509=ALL-UNNAMED
+          --add-opens java.base/sun.security.util=ALL-UNNAMED
+          --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp.datatype=ALL-UNNAMED
+        </argLine>
       </properties>
     </profile>
     <profile>
